--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@ interface and user experience of the AIM Portal of Access and accommodation cent
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Tharunp7777/Project1'"
+                onclick="location.href='https://github.com/tharund7/Project1'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://tharunp7777.github.io/Project1/'"
+                onclick="location.href='https://tharund7.github.io/Project1/'"
               >
                 Live Demo
               </button>
@@ -234,13 +234,13 @@ interface and user experience of the AIM Portal of Access and accommodation cent
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Tharunp7777/Project3'"
+                onclick="location.href='https://github.com/tharun7/Project3'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://tharunp7777.github.io/Project2/'"
+                onclick="location.href='https://tharund7.github.io/Project2/'"
               >
                 Live Demo
               </button>
@@ -258,13 +258,13 @@ interface and user experience of the AIM Portal of Access and accommodation cent
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Tharunp7777/Project3'"
+                onclick="location.href='https://github.com/tharund7/Project3'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://tharunp7777.github.io/Project3/'"
+                onclick="location.href='https://tharund7.github.io/Project3/'"
               >
                 Live Demo
               </button>
