--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -49,7 +53,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/THARUN-DERANGULA-RESUME.pdf')"
           >
-            Download CV
+          <span style="color: black;">Download CV</span>
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
@@ -66,7 +70,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/Tharunp7777'"
+            onclick="location.href='https://github.com/tharund7'"
           />
         </div>
       </div>
@@ -99,7 +103,7 @@
           <div class="text-container" style="text-align: left; margin-left: 100px; margin-right: 100px; ">
             <p style="color: black; font-size: 20px;">
                 Tharun Derangula: Aspiring software engineer with a passion for building intuitive and user-centric applications.
-                Masters in Computer Science student at Illinois Institute of Technology, boasting a perfect 4.0 GPA.
+                Masters in Computer Science student at Kennesaw State University, boasting a perfect 4.0 GPA.
                 Skilled in a wide range of front-end and back-end technologies like React, Angular, Java, Spring Boot, and AWS.
                 Proven experience in research, development, and testing through internships at Walmart Global Tech India and academic projects like Travel Buddy and Recipe Prediction System.
                 Eager to leverage strong technical expertise, problem-solving skills, and leadership experience to contribute to innovative projects and make a positive impact in the tech industry.
@@ -234,7 +238,7 @@ interface and user experience of the AIM Portal of Access and accommodation cent
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/tharund7/Project2'"
+                onclick="location.href='https://github.com/tharund7/Project3'"
               >
                 Github
               </button>
