--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedin1.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/tharunderangula/'"
@@ -124,7 +124,7 @@
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container"style="margin-left:50px px;margin-right:0px;margin-left: 50px;">
+          <div class="details-container"style="margin-left:50px px;margin-right:0px;margin-left: 50px; background-color:#fbd8bb ">
               <h2 class="experience-sub-title1"style="margin: left 50px;0px px;margin-right:0px;">Graduate Research Assistant</h2><br /><br />
               <div class="article-container">
                 <div class="container-fluid">
@@ -140,7 +140,7 @@
                     <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Enhanced a responsive web application using React JS and Bootstrap. <br />
                     <br /><i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>
                     spearheaded extensive research on front-end technologies and best practices, applying this knowledge to enhance the user
-interface and user experience of the AIM Portal of Access and accommodation center. <br />
+                    interface and user experience of the AIM Portal of Access and accommodation center. <br />
                     <br />
                     <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>Created new features and functionalities along with performing
                     bug fixes and increased user engagement by 15%.
@@ -152,7 +152,7 @@ interface and user experience of the AIM Portal of Access and accommodation cent
               
             </div>
           </div>
-          <div class="details-container" style="margin-left: 0px;margin-right: 50px;">
+          <div class="details-container" style="margin-left: 0px;margin-right: 50px; background-color: #E8F3D6;" >
             <h2 class="experience-sub-title1" style="margin-left: 0px;margin-right: 50px;">Software Developer Intern</h2><br /><br />
             <div class="article-container">
               <div class="container-fluid">
@@ -297,7 +297,7 @@ interface and user experience of the AIM Portal of Access and accommodation cent
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedin1.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
