--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project </h2>
+                <h2 class="experience-sub-title project-title">Project Five</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
