--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Master of Science in Information Technology<br />Bachelor in Computer Science and Engineering</p>
+              <p>Master of Science in Information Technology - GPA: 4.0/4.0<br />Bachelor in Computer Science and Engineering - GPA: 3.8/4.0</p>
             </div>
           </div>
           <div class="text-container" style="text-align: left; margin-left: 100px; margin-right: 100px; ">
             <p style="color: black; font-size: 20px;">
                 Tharun Derangula: Aspiring software engineer with a passion for building intuitive and user-centric applications.
-                Masters in Computer Science student at Kennesaw State University, boasting a perfect 4.0 GPA.
+                Masters in Computer Science student at Illinois Institute of Technology, boasting a perfect 4.0 GPA.
                 Skilled in a wide range of front-end and back-end technologies like React, Angular, Java, Spring Boot, and AWS.
                 Proven experience in research, development, and testing through internships at Walmart Global Tech India and academic projects like Travel Buddy and Recipe Prediction System.
                 Eager to leverage strong technical expertise, problem-solving skills, and leadership experience to contribute to innovative projects and make a positive impact in the tech industry.
