--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: 0; /* Set your initial background color and transparency level */
+    background-color: rgba(255, 255, 255, 0.5); /* Set your initial background color and transparency level */
     z-index: 1000; /* Set a high z-index to ensure it appears above other elements */
     transition: background-color 0.3s ease; /* Add a smooth transition effect */
   }
@@ -254,13 +254,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project1'"
+                    onclick="location.href='https://github.com/tharund7/natours-tour-booking-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project1/'"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/'"
                   >
                     Live Demo
                   </button>
@@ -283,13 +283,13 @@
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/tharund7/Project2'"
+                            onclick="location.href='https://github.com/tharund7/trillo-hotel-booking-website'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://tharund7.github.io/Project2/'"
+                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
                           >
                             Live Demo
                           </button>
@@ -312,13 +312,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project3'"
+                    onclick="location.href='https://github.com/tharund7/nexter-realtors-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project2/'"
+                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
                   >
                     Live Demo
                   </button>
@@ -336,17 +336,17 @@
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Project Four</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project4'"
+                    onclick="location.href='https://github.com/tharund7/glowing-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/project-4/'"
+                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
                   >
                     Live Demo
                   </button>
