--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.5); /* Set your initial background color and transparency level */
+    background-color: rgba(255, 255, 255, 0.7); /* Set your initial background color and transparency level */
     z-index: 1000; /* Set a high z-index to ensure it appears above other elements */
     transition: background-color 0.3s ease; /* Add a smooth transition effect */
   }
@@ -60,8 +60,9 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Tharun Derangula</div>
-      <div>
+      <div class="logo-container">
+        <div class="logo">Tharun Derangula</div>
+      </div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
@@ -254,13 +255,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/natours-tour-booking-website'"
+                    onclick="location.href='https://github.com/tharund7/Project1'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/'"
+                    onclick="location.href='https://tharund7.github.io/Project1/'"
                   >
                     Live Demo
                   </button>
@@ -283,13 +284,13 @@
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/tharund7/trillo-hotel-booking-website'"
+                            onclick="location.href='https://github.com/tharund7/Project2'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
+                            onclick="location.href='https://tharund7.github.io/Project2/'"
                           >
                             Live Demo
                           </button>
@@ -312,13 +313,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/nexter-realtors-website'"
+                    onclick="location.href='https://github.com/tharund7/Project3'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
+                    onclick="location.href='https://tharund7.github.io/Project2/'"
                   >
                     Live Demo
                   </button>
@@ -336,17 +337,17 @@
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Four</h2>
+                <h2 class="experience-sub-title project-title">Project Three</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/glowing-website'"
+                    onclick="location.href='https://github.com/tharund7/Project4'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
+                    onclick="location.href='https://tharund7.github.io/project-4/'"
                   >
                     Live Demo
                   </button>
@@ -418,17 +419,9 @@
       </div>
     </section>
     <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <p>Copyright &#169; 2023 Tharun D. All Rights Reserved.</p>
+      <div class="c">
+      <p >Copyright &#169; 2023 Tharun D. All Rights Reserved.</p>
+    </div>
     </footer>
     <script src="script.js"></script>
   </body>
