--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="section__text">
         <p class="section__text__p1" style="color: #fff;">Hello, I'm</p>
         <h1 class="title">Tharun Derangula</h1>
-        <p class="section__text__p2" style="color: #fff;">Graduate Research Assistant,<br> Illinois Institute of Technology, Chicago</p>
+        <p class="section__text__p2" style="color: #fff;">Graduate Research Assistant,<br> Kennesaw State University, Atlanta, GA.</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -135,7 +135,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Present<br />Graduate Research Assistant, Illinois Institute of Technology</p>
+              <p>Present<br />Graduate Research Assistant, Kennesaw State University</p>
               <p>8 Months <br />Software Developer Intern, Walmart Global Tech India</p>
             </div>
             <div class="details-container"style="margin-left: 0px;margin-right: 100px;">
@@ -145,7 +145,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Master of Science in Information Technology<br />Bachelor in Computer Science and Engineering</p>
+              <p>Master of Science in Information Technology - GPA: 4.0/4.0<br />Bachelor in Computer Science and Engineering - GPA: 3.8/4.0</p>
             </div>
           </div>
           <div class="text-container" style="text-align: left; margin-left: 100px; margin-right: 100px; ">
@@ -173,8 +173,8 @@
                 <div class="container-fluid">
                   <h2><i class="fa-solid fa-briefcase"></i></h2>
                   <h5>
-                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Illinois Institute of Technology, 
-                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Chicago, IL -
+                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Kennesaw State University, 
+                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Atlanta, GA -
                     <i class="square-icon fa-solid fa-square fa-2xs"></i> August 2023 – Present
                   </h5>
                   <p>
@@ -255,13 +255,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project1'"
+                    onclick="location.href='https://github.com/tharund7/natours-tour-booking-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project1/'"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/'"
                   >
                     Live Demo
                   </button>
@@ -284,13 +284,13 @@
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/tharund7/Project2'"
+                            onclick="location.href='https://github.com/tharund7/trillo-hotel-booking-website'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://tharund7.github.io/Project2/'"
+                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
                           >
                             Live Demo
                           </button>
@@ -313,13 +313,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project3'"
+                    onclick="location.href='https://github.com/tharund7/nexter-realtors-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project2/'"
+                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
                   >
                     Live Demo
                   </button>
@@ -337,17 +337,17 @@
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Project Four</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project4'"
+                    onclick="location.href='https://github.com/tharund7/glowing-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/project-4/'"
+                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
                   >
                     Live Demo
                   </button>
@@ -371,13 +371,13 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Fitness-Nutrition'"
+                    onclick="location.href='https://github.com/tharund7/Fitness-Nutrition-website'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Fitness-Nutrition/'"
+                    onclick="location.href='https://tharund7.github.io/Fitness-Nutrition-website/'"
                   >
                     Live Demo
                   </button>
