--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Present<br />Graduate Research Assistant, Illinois Institute of Technology</p>
+              <p>Present<br />Graduate Research Assistant, kennesaw state university</p>
               <p>8 Months <br />Software Developer Intern, Walmart Global Tech India</p>
             </div>
             <div class="details-container"style="margin-left: 0px;margin-right: 100px;">
@@ -173,23 +173,22 @@
                 <div class="container-fluid">
                   <h2><i class="fa-solid fa-briefcase"></i></h2>
                   <h5>
-                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Illinois Institute of Technology, 
-                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Chicago, IL -
+                    <i class="square-icon fa-solid fa-square fa-2xs"></i> kennesaw state university, 
+                    <i class="square-icon fa-solid fa-square fa-2xs"></i> Atlanta, GA -
                     <i class="square-icon fa-solid fa-square fa-2xs"></i> August 2023 – Present
                   </h5>
                   <p>
                     <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Technology Stack: HTML5, CSS3, Bootstrap, 
                     JavaScript, React JS, SQL, bootstrap <br /><br />
-                    <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Enhanced a responsive web application using React JS and Bootstrap. <br />
+                    <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>Developed and translated Matlab code into Python for analyzing insulin sensitivity and beta-cell responsivity
+                    protocols for an NIH-funded project.<br />
                     <br /><i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>
-                    spearheaded extensive research on front-end technologies and best practices, applying this knowledge to enhance the user
-                    interface and user experience of the AIM Portal of Access and accommodation center. <br />
+                    Created a Python web application to display analysis results, enhancing research accessibility and efficiency.
+ <br />
                     <br />
-                    <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>Created new features and functionalities along with performing
-                    bug fixes and increased user engagement by 15%.
+                    <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i>demonstrating expertise in data analysis and coding for biomedical research.
                     <br />
-                    <br />
-                    
+                    <br />   
                   </p>
                 </div>
               
