--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="section__text">
         <p class="section__text__p1" style="color: #fff;">Hello, I'm</p>
         <h1 class="title">Tharun Derangula</h1>
-        <p class="section__text__p2" style="color: #fff;">Graduate Research Assistant,<br> Illinois Institute of Technology, Chicago</p>
+        <p class="section__text__p2" style="color: #fff;">Graduate Research Assistant,<br> kennesaw state university, Atlanta</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
