--- a/index.html
+++ b/index.html
@@ -208,23 +208,17 @@
                 <p>
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Technology Stack: java, React, Angular, Bootstrap, 
                   Spring Boot, REST API, Nodejs, Typescript, CSS, <br /><br />
-                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Contributed to the development of a web application
-                  using Angular, gaining proficiency in front-end technologies and UI
-                  development and developed 10+ reusable UI components. Gained exposure to responsive UI development 
-                  using Angular Material for improved user interface design. <br />
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Led the development of a product search feature for Walmart.com, enhancing user experience and driving product
+discoverability. culminating in a 15% uplift in user engagement and a 20% increase in product discoverability. <br />
                   <br />
-                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Designed and implemented responsive UI 
-                  components using Angular Material, ensuring a consistent and visually appealing user
-                  interface across various devices and screen sizes.
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Implemented dynamic product filtering and sorting functionality using React and Redux, enabling seamless navigation for
+customers and 30% improvement in customer navigation efficiency.
                   <br />
                   <br />
-                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Assisted in building the back-end infrastructure with
-                  Java and Spring Boot, learning core principles of server-side development.
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Created RESTful APIs with Node.js and Express to fetch product data from a microservices-based back-end architecture.
                   <br />
                   <br />
-                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Implemented automated testing suites using JUnit 
-                  and Jasmine for back-end and front-end components, respectively, to maintain
-                  code integrity and reliability.
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> Integrated Elasticsearch for fast and relevant search results, improving customer satisfaction.Optimized API calls and front-end rendering to minimize page load times for millions of daily visitors.
                   <br />
                   <br />
                 </p>
