--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@ customers and 30% improvement in customer navigation efficiency.
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project1'"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project1/'"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/"
                   >
                     Live Demo
                   </button>
@@ -330,7 +330,7 @@ customers and 30% improvement in customer navigation efficiency.
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Project Four</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
