--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@ customers and 30% improvement in customer navigation efficiency.
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/' "
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/'"
                   >
                     Live Demo
                   </button>
@@ -277,13 +277,13 @@ customers and 30% improvement in customer navigation efficiency.
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/tharund7/Project2'"
+                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://tharund7.github.io/Project2/'"
+                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
                           >
                             Live Demo
                           </button>
@@ -306,13 +306,13 @@ customers and 30% improvement in customer navigation efficiency.
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project3'"
+                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project2/'"
+                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
                   >
                     Live Demo
                   </button>
@@ -334,13 +334,13 @@ customers and 30% improvement in customer navigation efficiency.
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Project4'"
+                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/project-4/'"
+                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
                   >
                     Live Demo
                   </button>
@@ -364,13 +364,13 @@ customers and 30% improvement in customer navigation efficiency.
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/tharund7/Fitness-Nutrition'"
+                    onclick="location.href='https://tharund7.github.io/Fitness-Nutrition-website/'"
                   >
                     Github
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Fitness-Nutrition/'"
+                    onclick="location.href='https://tharund7.github.io/Fitness-Nutrition-website/'"
                   >
                     Live Demo
                   </button>
