--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Present<br />Graduate Research Assistant, kennesaw state university</p>
-              <p>8 Months <br />Software Developer Intern, Walmart Global Tech India</p>
+              <p>Software Engineer, Kennesaw State University, GA, USA</p>
+              Software Development Engineer, Walmart Global Tech India, India
+              <p>Software Developer Intern, Walmart Global Tech India, India</p>
+              <p>Software Engineer, Ebox, India</p>
             </div>
             <div class="details-container"style="margin-left: 0px;margin-right: 100px;">
               <img
