--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="section__text">
         <p class="section__text__p1" style="color: #fff;">Hello, I'm</p>
         <h1 class="title">Tharun Derangula</h1>
-        <p class="section__text__p2" style="color: #fff;">Graduate Research Assistant,<br> Illinois Institute of Technology, Chicago</p>
+        <p class="section__text__p2" style="color: #fff;">Software Engineer | Graduate Research Assistant,<br> Kennesaw State University, Atlanta</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -136,7 +136,7 @@
               />
               <h3>Experience</h3>
               <p>Software Engineer, Kennesaw State University, GA, USA</p>
-              Software Development Engineer, Walmart Global Tech India, India
+              <p>Software Development Engineer, Walmart Global Tech India, India</p>
               <p>Software Developer Intern, Walmart Global Tech India, India</p>
               <p>Software Engineer, Ebox, India</p>
             </div>
