--- a/index.html
+++ b/index.html
@@ -17,44 +17,44 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <style>
   #desktop-nav {
+    position: absolute; /* Set as absolute so it doesn’t remain fixed */
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.7); /* Set your initial background color and transparency level */
-    z-index: 1000; /* Set a high z-index to ensure it appears above other elements */
-    transition: background-color 0.3s ease; /* Add a smooth transition effect */
-  }
-
-  #desktop-nav.transparent {
-    background-color: rgba(255, 255, 255, 0) !important; /* Make it fully transparent when scrolled */
+    background-color: rgba(255, 255, 255, 0.7); /* Set initial background color and transparency */
+    z-index: 1000; /* High z-index to ensure it appears above other elements */
+    transition: top 0.3s ease, background-color 0.3s ease; /* Transition for hiding effect and background */
   }
 </style>
 <script>
   $(document).ready(function () {
     var desktopNav = $("#desktop-nav");
+    var lastScrollTop = 0;
 
     $(window).scroll(function () {
-      var scrollPosition = $(this).scrollTop();
-      var maxOpacity = 0.7; // Set your initial transparency level here
+      var scrollTop = $(this).scrollTop();
 
-      // Calculate the transparency based on scroll position
-      var currentOpacity = maxOpacity - (scrollPosition / 300); // Adjust the divisor as needed
+      // Show or hide navbar based on scroll direction
+      if (scrollTop > lastScrollTop) {
+        // Scroll down - hide navbar
+        desktopNav.css('top', '-80px'); // Adjust to navbar height
+      } else {
+        // Scroll up - show navbar
+        desktopNav.css('top', '0');
+      }
 
-      // Ensure the transparency stays within the valid range
+      lastScrollTop = scrollTop;
+
+      // Update transparency based on scroll position
+      var maxOpacity = 0.7;
+      var currentOpacity = maxOpacity - (scrollTop / 300);
       currentOpacity = Math.max(0, Math.min(maxOpacity, currentOpacity));
 
-      // Apply the updated transparency
       desktopNav.css('background-color', 'rgba(255, 255, 255, ' + currentOpacity + ')');
-
-      // Add or remove the 'transparent' class based on the scroll position
-      if (scrollPosition > 0) {
-        desktopNav.addClass("transparent");
-      } else {
-        desktopNav.removeClass("transparent");
-      }
     });
   });
 </script>
+
 
   </head>
   <body>
