--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     </section>
     
-    <section id="experience">
+    <section id="experience" style= "background-color: #000000;">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container" style="display: grid; gap: 20px;">
