--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     </section>
     
-    <section id="experience" style= "background-color: #000000;">
+    <section id="experience" style= "background-color: #FF7A3F;">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container" style="display: grid; gap: 20px;">
@@ -183,6 +183,9 @@
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> Atlanta, Georgia, USA -
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> August 2023 – Present
                 </h5>
+                <p>Technology Stack: React, TypeScript, Redux, Spring Boot, Spring Data JPA, PostgreSQL, AWS (EC2, S3), OAuth 2.0, JWT,
+Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
+  
                 <p>
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
                   Built a full-stack healthcare management application using React and Spring Boot, implementing secure data flows and achieving 30% faster load times. Enhanced data privacy with OAuth 2.0 and JWT for secure authentication.
@@ -240,6 +243,11 @@
                   <br /><br />
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
                   Automated testing and deployment with CI/CD pipelines in Jenkins, achieving 50% faster code integration.
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
+                  Conducted comprehensive unit and integration testing with Jest and JUnit, achieving high code coverage and ensuring stability and reliability in production environments.
+                  <br /><br />
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
+                  Employed best coding practices and adhered to Walmart’s security and compliance standards, ensuring code quality and data protection across all applications.
                 </p>
               </div>
             </div>
@@ -290,6 +298,7 @@
                 <p><strong>Technology Stack:</strong> React, TypeScript, Redux, Node.js, Express, MongoDB, PostgreSQL, AWS (Lambda, EC2, S3, RDS),
                   Docker, OAuth 2.0, JWT, Webpack, Jest, JUnit, Jenkins, Git, Terraform.
                 </p>
+                <br /><br />
                 <p>
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
                   Designed and developed a comprehensive financial application with React and Node.js, delivering secure, real-time data processing for financial transactions and portfolio management.
@@ -308,6 +317,14 @@
                   <br /><br />
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
                   Strengthened security by implementing OAuth 2.0 and JWT for user authentication, achieving compliance with financial industry standards.
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
+                  Improved performance by leveraging caching, lazy loading, and code-splitting through Webpack, resulting in a 30% reduction in page load times.
+                  <br /><br />
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
+                  Conducted end-to-end testing with Jest for JavaScript and JUnit for Java components, achieving 90% code coverage and ensuring reliability for critical operations.
+                  <br /><br />
+                  <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
+                 Automated CI/CD with Jenkins, Git, and Terraform, enabling smooth, efficient deployments aligned with best practices for rapid,high-quality releases.
                 </p>
               </div>
             </div>
